# modeldriveprotocol

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-Hans.md  dprint.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.ai/rules/: CODING-STYLE.md  architecture.md  change-strategy.md  codex-cli.md  github-issues.md  progressive-disclosure.md  sdk-development.md  validation.md
.codex/: config.toml
.github/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-request.yml  feature-request.yml  question.yml
.github/workflows/: chrome-extension-ci.yml  chrome-extension-release.yml  ci.yml  deploy-pages.yml  release.yml  vscode-extension-ci.yml  vscode-extension-release.yml
agents/: architecture.md  change-strategy.md  progressive-disclosure.md  validation.md
apps/browser-simple-mdp-client/: CHANGELOG.md  package.json  tsconfig.json
apps/chrome-extension/: AGENTS.md  CHANGELOG.md  README.md  package.json  tsconfig.json  web-ext.config.example.ts  wxt.config.ts
apps/nodejs-simple-mdp-client/: AGENTS.md  CHANGELOG.md  package.json  tsconfig.json
apps/vscode-extension/: CHANGELOG.md  README.md  package.json  tsconfig.json
docs/: index.md
docs/.vitepress/: config.mts
docs/apps/: browser-simple-mdp-client.md  chrome-extension.md  jetbrains-plugin.md  vscode-extension.md
docs/blog/: why-i-created-this-project.md
docs/client/: embedding.md  js-client.md  overview.md
docs/contributing/: architecture.md  index.md  releasing-apps.md  releasing-packages.md  releasing-sdks.md  releasing.md
docs/examples/: browser-client.md  end-to-end.md  native-client.md  pi-agent-assistant.md
docs/guide/: architecture.md  faq.md  introduction.md  manual-install-claude-code.md  manual-install-codex.md  manual-install-cursor.md  manual-install.md  quick-start.md
docs/protocol/: capability-model.md  lifecycle.md  mcp-bridge.md  message-schema.md  overview.md  progressive-disclosure.md  security.md  transport.md
scripts/: clean.mjs  generated-docs.config.mjs  prepare-docs.mjs  run-local-mdp-mcp.mjs  smoke-test.mjs  sync-generated-docs.mjs  validate-release-versions.mjs
sdks/python/: README.md  pyproject.toml
sdks/python/src/modeldriveprotocol/: __init__.py  client.py  models.py  path_utils.py  protocol.py  registry.py
sdks/python/src/modeldriveprotocol/transports/: __init__.py  base.py  http_loop.py  websocket.py
sdks/python/tests/: test_client.py  test_registry.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  lib.rs  models.rs  path_utils.rs  protocol.rs  registry.rs  transport.rs
sdks/rust/tests/: client.rs  registry.rs
(+624 files in other folders)
