[package]
name = "modeldriveprotocol-client"
version = "2.2.0"
edition = "2021"
license = "MIT"
description = "Rust client SDK for Model Drive Protocol."
homepage = "https://github.com/modeldriveprotocol/modeldriveprotocol"
repository = "https://github.com/modeldriveprotocol/modeldriveprotocol"
readme = "README.md"
keywords = ["mdp", "mcp", "client", "sdk", "model-drive-protocol"]
categories = ["api-bindings", "network-programming"]

[dependencies]
async-trait = "0.1.89"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
http = "1.3.1"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

